--- a/footer.html
+++ b/footer.html
@@ -56,7 +56,7 @@
                 <h2><strong>NE RATEZ PAS LES BONS PLANS</strong></h2>
                 <p class="centrer">Inscrivez-vous à la Newsletter</p>
                 <form>
-                    <input class="input1" type="email" placeholder="Saisissez votre email">
+                    <input class="input1 news" type="email" placeholder="Saisissez votre email">
                     <input class="input-submit" type="submit" value="Valider">
                 </form>
             </div>
