--- a/header.html
+++ b/header.html
@@ -19,19 +19,17 @@
 
                 </a>
             </div>
-            <div class="menu_droit">
+            <div class="menu_langue">
                 <div id="langue">
-                    <ul>
-                        <li>
-                            <select>
-                                <option type="texte" value="fr">Fr</option>
-                                <option type="texte" value="en">En</option>
-                            </select>
-                        </li>
-                    </ul>
-                </div>
-            </div>
 
+                    <select>
+                                <option type="text" value="fr">Fr</option>
+                                <option type="text" value="en">En</option>
+                            </select>
+
+                </div>
+
+            </div>
         </div>
         <div class="menu_principal">
 
