--- a/pages/commande/panier.html
+++ b/pages/commande/panier.html
@@ -29,22 +29,25 @@
     <header id="haut" class="header_dynamic sticky-top"></header>
 
     <!--Corps-->
-    <main class="panier">
 
 
+    <main class="mon_panier">
+        <h1>Mon Panier</h1>
+        <div class="green-divider"></div>
+        <div class="panier">
 
-        <hr class="hr_1">
-        <div class="panier_gauche">
-            <h2>Mon Panier</h2>
-            <hr>
-            <div class="produit_panier">
-                <div class="div_img_panier">
-                    <a href="/pages/femme/produits/jean1.html"><img src="/images/femme/pret-a-porter/jean-pantalon/jean1/jean1_main.jpg" alt="image jean1 vetement femme pret-a-porter"></a>
-                </div>
-                <div class="div_descr_panier">
-                    <a href="/pages/femme/produits/jean1.html">Jean 712 SLIM - LEVI'S</a><br>
+            <hr class="hr_1">
+            <div class="panier_gauche">
 
-                    <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
+                <hr>
+                <div class="produit_panier">
+                    <div class="div_img_panier">
+                        <a href="/pages/femme/produits/jean1.html"><img src="/images/femme/pret-a-porter/jean-pantalon/jean1/jean1_main.jpg" alt="image jean1 vetement femme pret-a-porter"></a>
+                    </div>
+                    <div class="div_descr_panier">
+                        <a href="/pages/femme/produits/jean1.html">Jean 712 SLIM - LEVI'S</a><br>
+
+                        <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
                         <option value="34" selected>34</option>
                         <option value="36">36</option>
                         <option value="38">38</option>
@@ -57,21 +60,21 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                             </select><br>
-                    <a href="#"><i class="fa fa-trash"></i></a>
+                        <a href="#"><i class="fa fa-trash"></i></a>
+                    </div>
+                    <div class="div_prix_panier">
+                        <h4>59€99</h4>
+                    </div>
                 </div>
-                <div class="div_prix_panier">
-                    <h4>59€99</h4>
-                </div>
-            </div>
-            <hr>
-            <div class="produit_panier">
-                <div class="div_img_panier">
-                    <a href="/pages/femme/produits/manteau1.html"><img src="/images/femme/pret-a-porter/veste-manteau/manteau1/manteau1_main.jpg" alt="image manteau1 vetement femme pret-a-porter"></a>
-                </div>
-                <div class="div_descr_panier">
-                    <a href="/pages/femme/produits/jean1.html">Manteau imitation fourrure</a><br>
+                <hr>
+                <div class="produit_panier">
+                    <div class="div_img_panier">
+                        <a href="/pages/femme/produits/manteau1.html"><img src="/images/femme/pret-a-porter/veste-manteau/manteau1/manteau1_main.jpg" alt="image manteau1 vetement femme pret-a-porter"></a>
+                    </div>
+                    <div class="div_descr_panier">
+                        <a href="/pages/femme/produits/jean1.html">Manteau imitation fourrure</a><br>
 
-                    <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
+                        <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
                         <option value="34" selected>34</option>
                         <option value="36">36</option>
                         <option value="38">38</option>
@@ -84,21 +87,21 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                             </select><br>
-                    <a href="#"><i class="fa fa-trash"></i></a>
+                        <a href="#"><i class="fa fa-trash"></i></a>
+                    </div>
+                    <div class="div_prix_panier">
+                        <h4>99€99</h4>
+                    </div>
                 </div>
-                <div class="div_prix_panier">
-                    <h4>99€99</h4>
-                </div>
-            </div>
-            <hr>
-            <div class="produit_panier">
-                <div class="div_img_panier">
-                    <a href="/pages/femme/produits/lunettes1.html"><img src="/images/femme/accessoires/lunettes/lunettes1/lunettes1_main.jpg" alt="image lunettes1 vetement femme pret-a-porter"></a>
-                </div>
-                <div class="div_descr_panier">
-                    <a href="/pages/femme/produits/jean1.html">Lunettes de soleil</a><br>
+                <hr>
+                <div class="produit_panier">
+                    <div class="div_img_panier">
+                        <a href="/pages/femme/produits/lunettes1.html"><img src="/images/femme/accessoires/lunettes/lunettes1/lunettes1_main.jpg" alt="image lunettes1 vetement femme pret-a-porter"></a>
+                    </div>
+                    <div class="div_descr_panier">
+                        <a href="/pages/femme/produits/jean1.html">Lunettes de soleil</a><br>
 
-                    <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
+                        <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
                         <option value="TU" selected>TU</option>
                       
                         </select><br> Quantité : <select name="quantite" class="qte_panier">
@@ -108,44 +111,44 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                             </select><br>
-                    <a href="#"><i class="fa fa-trash"></i></a>
+                        <a href="#"><i class="fa fa-trash"></i></a>
+                    </div>
+                    <div class="div_prix_panier">
+                        <h4>39€90</h4>
+                    </div>
                 </div>
-                <div class="div_prix_panier">
-                    <h4>39€90</h4>
-                </div>
+
+
+            </div>
+            <div class="panier_droit">
+                <input class="input-submit commander" type="submit" value="COMMANDER">
+                <table class="tableau_panier">
+                    <tr>
+                        <td>Sous total (TTC)</td>
+                        <td class="right">199€88</td>
+                    </tr>
+                </table>
+                <hr>CODE PROMO<br>
+                <input id="input_code_promo" type="text" value="Saisissez votre code">
+                <input id="btn_code_promo" type="submit" value="OK">
+                <hr>
+                <table class="tableau_panier">
+                    <tr>
+                        <td>Frais de livraison</td>
+                        <td class="right">gratuits*</td>
+
+                    </tr>
+                    <tr>
+                        <td>TOTAL COMMANDE<br></td>
+                        <td class="right">199€88</td>
+                    </tr>
+                </table>
+                <input type="checkbox" name="cgv" id="cvg" required><label for="cvg"><em>J'accepte les <a href="/pages/informations/cgv.html">CVG</a><sup> (1)</sup></em></label>
+                <input class="input-submit commander" type="submit" value="COMMANDER"><em><sup>*</sup>À partir de 30€ ou en magasin</em><br/>
+                <em><sup>(1)</sup>Conditions générales de vente</em>
             </div>
 
-
         </div>
-        <div class="panier_droit">
-            <input class="input-submit commander" type="submit" value="COMMANDER">
-            <table class="tableau_panier">
-                <tr>
-                    <td>Sous total (TTC)</td>
-                    <td class="right">199€88</td>
-                </tr>
-            </table>
-            <hr>CODE PROMO<br>
-            <input id="input_code_promo" type="text" value="Saisissez votre code">
-            <input id="btn_code_promo" type="submit" value="OK">
-            <hr>
-            <table class="tableau_panier">
-                <tr>
-                    <td>Frais de livraison</td>
-                    <td class="right">gratuits*</td>
-
-                </tr>
-                <tr>
-                    <td>TOTAL COMMANDE<br></td>
-                    <td class="right">199€88</td>
-                </tr>
-            </table>
-            <input type="checkbox" name="cgv" id="cvg" required><label for="cvg"><em>J'accepte les <a href="/pages/informations/cgv.html">CVG</a><sup> (1)</sup></em></label>
-            <input class="input-submit commander" type="submit" value="COMMANDER"><em><sup>*</sup>À partir de 30€ ou en magasin</em><br/>
-            <em><sup>(1)</sup>Conditions générales de vente</em>
-        </div>
-
-
     </main>
 
     <!--Footer-->
