--- a/pages/informations/mentionslegales.html
+++ b/pages/informations/mentionslegales.html
@@ -34,29 +34,30 @@
 
         <div class="information">
             <h1>Mentions Légales</h1>
-            <h2>Éditeur</h2>
             <div class="green-divider"></div>
-            <p>Le site web http://lpc-gib.go.yj.fr/LPC/index.html est réalisé et édité par la société THE OTHER STORE.</p>
+            <h2>Éditeur</h2>
+
+            <p>Le site web <a href="https://www.mouyim-gibassier.xyz">https://www.mouyim-gibassier.xyz</a> est réalisé et édité par la société THE OTHER STORE.</p>
 
             <p>La société Le Petit Commerce a confié la création et la gestion de son site web www.lpc-gib.com à la société THE OTHER STORE. Les produits achetés sur ce site sont vendus à travers la société THE OTHER STORE, SAS au capital de 166 138 euros,
                 R.C.S de Paris 000 000 000, dont le siège social se situe au 1 Avenue du Grand Commerce BP 25036 75 005 Paris Cedex. Nom du responsable de publication : Jean Marinier<br> Email :
                 <a href="mailto:serviceclient@eboutique.lepetitcommerce.fr">serviceclient@eboutique.lepetitcommerce.com</a> <br></p>
 
             <h2>Hébergeur</h2>
-            <div class="green-divider"></div>
+
             <p><strong>Oxalide</strong></p>
             <address>25 boulevard de Strasbourg<br> 75010 Paris<br> RCS B 433 507 787</address>
             <p>Contact : contact@oxalide.com<br>Téléphone : +33(1) 75 77 16 66</p>
 
             <h2>Crédits</h2>
-            <div class="green-divider"></div>
+
             <p>Tous droits de reproduction ou de citation réservés à THE OTHER STORE.</p>
             <p>Photos produits et produits portés sur mannequin : THE OTHER STORE</p>
             <p>Photos catalogue Lookbook : Le Petit Commerce</p>
             <p>Stratégie, création, conception, intégration et développement : www.the-other-store.com</p>
 
             <h2>Confidentialité</h2>
-            <div class="green-divider"></div>
+
             <p>Conformément à la loi "Informatique et Liberté" du 06 Janvier 1978, vous bénéficiez d'un droit d'accès, de rectification, de modification et de suppression aux données vous concernant. Le site est déclaré à la CNIL sous le n° 1351361.</p>
             <p>Vous pouvez exercer ce droit en nous envoyant un courrier à l'adresse suivante ou par email :</p>
             <p>THE OTHER STORE E-boutique<br>Le Petit Commerce</p>
