--- a/pages/laboutique/notrehistoire.html
+++ b/pages/laboutique/notrehistoire.html
@@ -29,10 +29,11 @@
     <header id="haut" class="header_dynamic sticky-top"></header>
 
     <!--Corps-->
-    <main class="Notre histoire">
+    <main class="notre_histoire">
         <h1>Le Petit Commerce</h1>
-        <h2>Notre histoire</h2>
         <div class="green-divider"></div>
+        <h2>Notre histoire</h2>
+
         <div class="a_propos">
 
             <div class="img_a_propos"><img src="/images/image_index1.webp" alt="image boutique e-commerce vente vetements homme femme"></div>
@@ -42,20 +43,74 @@
                 <p>Vous surprendre, vous accompagner chaque saison, en vous transmettant le goût de l’art et des nouvelles tendances, telle est notre philosophie…"</p>
             </div>
         </div>
-        <h2>On parle de nous</h2>
+        <h2>On parle de nous </h2>
         <div class="green-divider"></div>
-        <h5 class="centrer">Dans la presse ou sur la blogosphère, on parle du Petit Commerce !<br>Découvrez ici les articles, témoignages et interviews de tous ceux qui se sont laissés séduire par notre univers</h5>
-
+        <h3 class="centrer">Dans la presse ou sur la blogosphère, on parle du Petit Commerce !<br>Découvrez ici les articles, témoignages et interviews de tous ceux qui se sont laissés séduire par notre univers</h3>
+        <h4>Découvrez notre univers en vidéo</h4>
         <div class="video">
 
-            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/tjYUwzkPnuU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/TH41sIWq3Zs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="video_et_descr">
+                <div><iframe width="560" height="315" src="https://www.youtube.com/embed/tjYUwzkPnuU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
+                <div class="video_descr">
+                    <p>Vidéo d'inauguration du premier magasin Le Petit commerce en exclusivité à Paris</p>
+                </div>
+            </div>
+            <div class="video_et_descr">
+                <div><iframe width="560" height="315" src="https://www.youtube.com/embed/TH41sIWq3Zs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="video_descr">
+                    <p>Le Petit Commerce a été </p>
+                </div>
+            </div>
+            <div class="video_et_descr">
+                <div><iframe width="560" height="315" src="https://www.youtube.com/embed/tjYUwzkPnuU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+                <div class="video_descr">
+                    <p>Vous surprendre, vous accompagner chaque saison, en vous transmettant le goût de l’art et des nouvelles tendances, telle est notre philosophie…"</p>
+                </div>
+            </div>
         </div>
 
 
         <div class="presse">
-            <div>
+            <h4>Découvrez les articles qui parlent de nous</h4>
+            <div class="row actualite_e">
+                <div class="card">
+                    <img src="/images/actualites/image_actu1.jpg" class="card-img-top" alt="Black Friday: aux États-Unis, les ventes en ligne atteignent des records">
+                    <div class="card-body">
+                        <h2 class="card-title">Black Friday: aux États-Unis, les ventes en ligne atteignent des records</h2>
+                        <p class="card-text">Les consommateurs américains ont dépensé au moins 6,2 millions de dollars, par minute, en ligne vendredi dernier.</p>
+                        <a class="btn_link actu" href="https://www.frenchweb.fr/black-friday-aux-etats-unis-les-ventes-en-ligne-atteignent-des-records/410767" role="button">Lire la suite</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/images/actualites/image_actu2.jpg" class="card-img-top" alt="La Cnil condamne Carrefour à une amende de 3 millions d’euros pour manquements au RGPD">
+                    <div class="card-body">
+                        <h2 class="card-title">La Cnil condamne Carrefour à une amende de 3 millions d’euros pour manquements au RGPD</h2>
+                        <p class="card-text">Parmi les manquements aux obligations prévues par le RGPD, on peut citer un manque d’informations fournies aux utilisateurs lors de…</p>
+                        <a class="btn_link actu" href="https://www.frenchweb.fr/la-cnil-condamne-carrefour-a-une-amende-de-3-millions-deuros-pour-manquements-au-rgpd/410681" role="button">Lire la suite</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/images/actualites/image_actu3.jpg" class="card-img-top" alt="Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage">
+                    <div class="card-body">
+                        <h2 class="card-title">Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage</h2>
+                        <p class="card-text">La plateforme française de mise en relation entre professionnels du bricolage et particuliers NeedHelp passe sous pavillon anglais.</p>
+                        <a class="btn_link actu" href="https://www.frenchweb.fr/kingfisher-rachete-needhelp-pour-accelerer-la-digitalisation-de-ses-services-de-bricolage/410483" role="button">Lire la suite</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/images/actualites/image_actu3.jpg" class="card-img-top" alt="Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage">
+                    <div class="card-body">
+                        <h2 class="card-title">Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage</h2>
+                        <p class="card-text">La plateforme française de mise en relation entre professionnels du bricolage et particuliers NeedHelp passe sous pavillon anglais.</p>
+                        <a class="btn_link actu" href="https://www.frenchweb.fr/kingfisher-rachete-needhelp-pour-accelerer-la-digitalisation-de-ses-services-de-bricolage/410483" role="button">Lire la suite</a>
+                    </div>
+                </div>
+            </div>
+            <!--<div>
                 <a href="https://france3-regions.francetvinfo.fr/bourgogne-franche-comte/apres-deconfinement-quelles-solutions-envisagees-reouverture-magasins-vetements-1819184.html" target="_blank"><img src="/presse/presse1.png" alt="article1 le petit commerce"></a>
             </div>
             <div>
@@ -67,16 +122,16 @@
         </div>
         <div class="logo_presse">
             <div>
-                <a href="www.google.fr" target="_blank"><img src="/presse/logo_google.png" alt="logo google"></a>
+                <a href="https://www.google.com/" target="_blank"><img src="/presse/logo_google.png" alt="logo google"></a>
             </div>
             <div>
-                <a href="www.google.fr" target="_blank"><img src="/presse/logo_lejournaldunet.gif" alt="logo journal du net"></a>
+                <a href="https://www.google.com/" target="_blank"><img src="/presse/logo_lejournaldunet.gif" alt="logo journal du net"></a>
             </div>
             <div>
-                <a href="www.google.fr" target="_blank"><img src="/presse/Logo_leparisien.png" alt="logo le parisien"></a>
+                <a href="https://www.google.com/" target="_blank"><img src="/presse/Logo_leparisien.png" alt="logo le parisien"></a>
             </div>
 
-        </div>
+        </div>-->
 
     </main>
     <!--Footer-->
