--- a/pages/laboutique/pointdevente.html
+++ b/pages/laboutique/pointdevente.html
@@ -31,6 +31,7 @@
     <!--Corps-->
     <main class="pdv">
         <h1>Point de vente</h1>
+        <div class="green-divider"></div>
         <div id="pointdevente">
             <div id="horaires">
                 <div>
@@ -42,8 +43,8 @@
                     1 Avenue du Grand Commerce<br>
                     BP 25036<br>
                     75 005 Paris Cedex<br>
-                    </address> Tel :
-                    <a href="tel:+33130688240">01 30 68 82 40</a>
+                    </address><span>Tel :</span>
+                    <a class="tel" href="tel:+33130688240">01 30 68 82 40</a>
                 </div>
                 <div>
                     <h3 class="centrer">Horaires d'ouverture</h3>
