--- a/pages/laboutique/recrutement.html
+++ b/pages/laboutique/recrutement.html
@@ -37,6 +37,7 @@
 
 
         <h1>Nous rejoindre</h1>
+        <div class="green-divider"></div>
         <form method="POST" action="#">
             <label class="label1" for="nom">Nom*</label><br>
             <input class="input1" id="nom" type="text" size="30" placeholder="Votre Nom" required><br>
