--- a/pages/laboutique/reservation.html
+++ b/pages/laboutique/reservation.html
@@ -40,6 +40,7 @@
         <div class="form-reservation">
             <div class="entete-reservation">
                 <h1>Réservation<br>Coaching Personnalisé</h1>
+                <div class="green-divider"></div>
                 <h2 class="reservation">Vous souhaitez des conseils personnalisés,<br> un relooking, pour une occasion en particulier ou pour le plaisir ?<br>N'hésitez plus ! Venez vivre une expérience unique accompagné de l'un de nos conseillers, experts en relooking !
                 </h2>
             </div>
