--- a/pages/femme/femme_produits.html
+++ b/pages/femme/femme_produits.html
@@ -119,7 +119,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/veste4.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste4/veste4_main.jpg" alt="Veste à carreaux en pur lin vetement femme pret-a-porter"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Veste à carreaux en pur lin</h4>
+                                    <h4 class="card-title">Veste à carreaux</h4>
                                     <span class="prix">59€99</span>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/pull1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/pull1/pull1_main.jpg" alt="Pull col montant à torsades ivoire"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Pull col montant à torsades ivoire</h4>
+                                    <h4 class="card-title">Pull col montant</h4>
                                     <span class="prix">45€99</span>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/pull2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/pull2/pull2_main.jpg" alt="Pull jacquard col rond gris"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Pull jacquard col rond gris</h4>
+                                    <h4 class="card-title">Pull jacquard</h4>
                                     <span class="prix">35€99</span>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/pull3.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/pull3/pull3_main.jpg" alt="Pull"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Pull col V en cachemire</h4>
+                                    <h4 class="card-title">Pull col V</h4>
                                     <span class="prix">89€99</span>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/gilet1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/gilet1/gilet1_main.jpg" alt="gilet"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Gilet col V pointelle</h4>
+                                    <h4 class="card-title">Gilet col V</h4>
                                     <span class="prix">29€99</span>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/gilet3.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/gilet3/gilet3_main.jpg" alt="gilet"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Cardigan maille fantaisie</h4>
+                                    <h4 class="card-title">Cardigan maille</h4>
                                     <span class="prix">35€99</span>
                                 </div>
                             </div>
@@ -193,7 +193,7 @@
                             <div class="card my-3 border-grey shadow">
                                 <a class="stretched-link" href="/pages/femme/produits/robe1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/robe/robe1/robe1_main.jpg" alt="robe"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Robe patineuse courte manches</h4>
+                                    <h4 class="card-title">Robe patineuse</h4>
                                     <span class="prix">59€99</span>
                                 </div>
                             </div>
