--- a/pages/informations/avis.html
+++ b/pages/informations/avis.html
@@ -31,10 +31,11 @@
     <!--Corps-->
     <main class="container-fluid pages_avis">
         <h1>Laissez-nous un commentaire ...</h1>
+        <div class="green-divider"></div>
         <div class="avis">
 
             <div class="avis_gauche">
-                <h2>Avis</h2>
+                <h2>Avis de nos clients</h2>
                 <div><span class="avis_texte">"Un grand merci au Petit Commerce pour vos conseils"</span><br>
                     <div><span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
@@ -104,7 +105,7 @@
                 <div class="grey-divider"></div>
             </div>
             <div class="avis_droit_form">
-                <h2>Mon avis</h2>
+                <h2>Votre avis</h2>
                 <form method="POST" action="#">
                     <label class="label1" for="nom">Nom</label><br>
                     <input class="input1" id="nom" type="text" size="30" placeholder="Votre Nom"><br>
