--- a/pages/laboutique/contact.html
+++ b/pages/laboutique/contact.html
@@ -31,6 +31,7 @@
     <!--Corps-->
     <main>
         <h1>Contactez-nous</h1>
+        <div class="green-divider"></div>
         <div class="contact">
 
             <div class="contact-gauche">
@@ -79,7 +80,7 @@
                     <li>
                         <img src="/mes_icons/icons_contact/icon-tel.png" alt="icon téléphone" title="nous appeler">
                         <h3><strong>NOUS APPELER</strong></h3>
-                        <p class="centrer">Contactez notre service client<br>au <a href="tel:+33130688240">01 30 68 82 40</a>,<br>du lundi au vendredi de 9h à 18h.</p>
+                        <p class="centrer">Contactez notre service client<br>au <a class="tel" href="tel:+33130688240">01 30 68 82 40</a>,<br>du lundi au vendredi de 9h à 18h.</p>
                     </li>
                     <li>
                         <img src="/mes_icons/icons_contact/icon-courrier.png" alt="icon courrier" title="nous ecrire">
