avant modif css

--- a/header.html
+++ b/header.html
@@ -12,23 +12,18 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
-
             <div class="logo">
                 <a href="/index.html">
                     <img src="/logo/logo.png" alt="LPC" />
-
                 </a>
             </div>
             <div class="menu_langue">
                 <div id="langue">
-
                     <select>
-                                <option type="text" value="fr">Fr</option>
-                                <option type="text" value="en">En</option>
-                            </select>
-
+                        <option type="text" value="fr">Fr</option>
+                        <option type="text" value="en">En</option>
+                    </select>
                 </div>
-
             </div>
         </div>
         <div class="menu_principal">
@@ -123,7 +118,15 @@
 
                         <li class="icon_loupe"><i class="fa fa-search"></i></li>
                         <li><a href="/pages/laboutique/pointdevente.html"><i class="fa fa-map-marker"></i></a></li>
-                        <li><a href="/pages/commande/moncompte.html"><i class="fa fa-user"></i></a></li>
+                        <li class="user"><i class="fa fa-user" id="user_logo"></i>
+                            <ul class="user_ul">
+                                <li>
+                                    <a href="/pages/commande/moncompte.html">Mon compte</a></li>
+                                <hr/>
+                                <li>
+                                    <a href="/pages/commande/mes_commandes.html">Mes commandes</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/pages/commande/panier.html"><i class="fa fa-shopping-bag"></i></a>
                     </ul>
                 </div>
