--- a/pages/commande/plandusite.html
+++ b/pages/commande/plandusite.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="/css/style.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Overlock&family=Satisfy&display=swap" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Bootstrap library fonte-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="/css/style.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -34,43 +34,125 @@
         <div class="green-divider"></div>
         <article class="pds">
             <ul>
-                <li class="pds_main">Commande
+                <li class="pds_main">
+
+                    <h2>Commande</h2>
                     <ul>
-                        <li><a href="/pages/commande/moncompte.html">Mon compte</a></li>
-                        <li><a href="/pages/commande/moncompte.html">Mes commandes</a></li>
-                        <li><a href="/pages/femme/femme_categories.html">Collection Femme</a>
+                        <li>
+                            <h3>Mon compte</h3>
                             <ul>
-                                <li><a href="/pages/femme/femme_produits.html?#pap">Prêt-à-porter</a></li>
-                                <li><a href="/pages/femme/femme_produits.html?#accessoires">Accessoires</a></li>
+                                <li>
+                                    <a href="/pages/commande/moncompte.html">
+                                        <h4>• Mon compte</h4>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/pages/commande/mes_commandes.html">
+                                        <h4>• Mes commandes</h4>
+                                    </a>
+                                </li>
                             </ul>
-                        </li>
-                        <li><a href="/pages/homme/homme_categories.html">Collection Homme</a>
-                            <ul>
-                                <li><a href="/pages/homme/homme_categories.html">Toute la Collection</a></li>
-                                <li><a href="/pages/homme/homme_produits.html?#accessoires">Accessoires</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/pages/commande/plandusite.html">Plan du site</a></li>
+                            <li>
+                                <a href="/pages/femme/femme_categories.html">
+                                    <h3>Collection Femme</h3>
+                                </a>
+                                <ul>
+                                    <li>
+                                        <a href="/pages/femme/femme_produits.html?#pap">
+                                            <h4>• Prêt-à-porter</h4>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/pages/femme/femme_produits.html?#accessoires">
+                                            <h4>• Accessoires</h4>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/pages/homme/homme_categories.html">
+                                    <h3>Collection Homme</h3>
+                                </a>
+                                <ul>
+                                    <li>
+                                        <a href="/pages/homme/homme_produits.html?#pap.html">
+                                            <h4>• Prêt-à-porter</h4>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/pages/homme/homme_produits.html?#accessoires">
+                                            <h4>• Accessoires</h4>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/pages/commande/plandusite.html">
+                                    <h3>Plan du site</h3>
+                                </a>
+                            </li>
                     </ul>
-                </li>
-                <li class="pds_main">La boutique
-                    <ul>
-                        <li><a href="/pages/laboutique/reservation.html">Réservation</a></li>
-                        <li><a href="/pages/laboutique/pointdevente.html">Point de vente</a></li>
-                        <li><a href="/pages/laboutique/notrehistoire.html">Notre histoire</a></li>
-                        <li><a href="/pages/laboutique/contact.html">Contactez-nous</a></li>
-                        <li><a href="/pages/laboutique/recrutement.html">Nous rejoindre</a></li>
-                    </ul>
-                </li>
-                <li class="pds_main">Informations
-                    <ul>
-                        <li><a href="/pages/informations/actualite.html">Actualité</a></li>
-                        <li><a href="/pages/informations/avis.html">Avis</a></li>
-                        <li><a href="/pages/informations/faq.html">Foire aux questions</a></li>
-                        <li><a href="/pages/informations/cgv.html">CGV</a></li>
-                        <li><a href="/pages/informations/mentionslegales.html">Mentions légales</a></li>
-                    </ul>
-                </li>
+                    </li>
+                    <li class="pds_main">
+                        <h2>La boutique</h2>
+                        <ul>
+                            <li>
+                                <a href="/pages/laboutique/reservation.html">
+                                    <h3>Réservation</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/laboutique/pointdevente.html">
+                                    <h3>Point de vente</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/laboutique/notrehistoire.html">
+                                    <h3>Notre histoire</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/laboutique/contact.html">
+                                    <h3>Contactez-nous</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/laboutique/recrutement.html">
+                                    <h3>Nous rejoindre</h3>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="pds_main">
+                        <h2>Informations</h2>
+                        <ul>
+                            <li>
+                                <a href="/pages/informations/actualite.html">
+                                    <h3>Actualité</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/informations/avis.html">
+                                    <h3>Avis</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/informations/faq.html">
+                                    <h3>Foire aux questions</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/informations/cgv.html">
+                                    <h3>CGV</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/pages/informations/mentionslegales.html">
+                                    <h3>Mentions légales</h3>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
 
             </ul>
 
