--- a/pages/femme/produits/article.html
+++ b/pages/femme/produits/article.html
@@ -80,7 +80,7 @@
         <h2>Nos suggestions</h2>
     </div>
     <div class="row row_suggestion">
-        <div class="col col-xl-4">
+        <div class="col col-md-4">
             <div class="card border-grey shadow">
                 <a href="/pages/femme/produits/veste3.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste3/veste3_main.jpg" alt="Veste saharienne"></a>
                 <div class="card-body">
@@ -89,20 +89,20 @@
                 </div>
             </div>
         </div>
-        <div class="col col-xl-4">
+        <div class="col col-md-4">
             <div class="card border-grey shadow">
                 <a href="/pages/femme/produits/pull2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/pull2/pull2_main.jpg" alt="Pull jacquard col rond gris"></a>
                 <div class="card-body">
-                    <h5 class="card-title">Pull jacquard col rond gris
+                    <h5 class="card-title">Pull jacquard
                         <strong class="pull-right">35€99</strong></h5>
                 </div>
             </div>
         </div>
-        <div class="col col-xl-4">
+        <div class="col col-md-4">
             <div class="card border-grey shadow">
                 <a href="/pages/femme/produits/robe3.html"><img class="card-img-top" src="/images/femme/pret-a-porter/robe/robe3/robe3_main.jpg" alt="Robe manches longues, col roulé"></a>
                 <div class="card-body">
-                    <h5 class="card-title">Robe manches longues, col roulé
+                    <h5 class="card-title">Robe manches longues
                         <strong class="pull-right">69€99</strong></h5>
                 </div>
             </div>
